--- a/n’ize.css
+++ b/n’ize.css
@@ -1,4 +1,4 @@
-/*! n’ize.css v0.1.1 | MIT License | github.com/smnscp/n-ize.css */
+/*! n’ize.css v0.2.0 | MIT License | github.com/smnscp/n-ize.css */
 
 /* Document
    ========================================================================== */
@@ -6,14 +6,14 @@
 /**
  * 1. Set Box sizing default to border-box (https://css-tricks.com/box-sizing/)
  * 2. Prevent adjustments of font size after orientation changes in iOS.
- * 3. Correct the line height in all browsers.
+ * 3. Provide a slot for setting the root line height.
  */
 
 :root {
   box-sizing: border-box; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
   text-size-adjust: 100%; /* 2 */
-  line-height: 1.15; /* 3 */
+  line-height: var(--line-root); /* 3 */
 }
 
 /* everything inherits border-box unless specified */
@@ -27,19 +27,74 @@
    ========================================================================== */
 
 /**
- * Remove the margin in all browsers.
+ * 1. Remove the margin in all browsers.
+ * 2. Generic typography.
  */
 
 body {
   margin: 0;
+  font-family: var(--font-body);
+  font-weight: var(--weight-body);
+  font-size: var(--scale-0);
+  line-height: var(--line-0);
 }
 
 /**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
+ * Generic typography for headings.
  */
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-titling);
+  font-weight: var(--weight-titling);
+}
 h1 {
+  font-size: var(--scale-3);
+  line-height: var(--line-3);
+}
+h2,
+:is(article, aside, nav, section)
+  h1 {
+  font-size: var(--scale-2);
+  line-height: var(--line-2);
+}
+h3,
+:is(article, aside, nav, section)
+  :is(article, aside, nav, section)
+  h1 {
+  font-size: var(--scale-1);
+  line-height: var(--line-1);
+}
+h4,
+:is(article, aside, nav, section)
+  :is(article, aside, nav, section)
+  :is(article, aside, nav, section)
+  h1 {
+  font-size: var(--scale-0);
+  line-height: var(--line-0);
+}
+h5,
+:is(article, aside, nav, section)
+  :is(article, aside, nav, section)
+  :is(article, aside, nav, section)
+  :is(article, aside, nav, section)
+  h1 {
+  font-size: var(--scale--1);
+  line-height: var(--line--1);
+}
+h6,
+:is(article, aside, nav, section)
+  :is(article, aside, nav, section)
+  :is(article, aside, nav, section)
+  :is(article, aside, nav, section)
+  :is(article, aside, nav, section)
+  h1 {
+  font-size: var(--scale--2);
+  line-height: var(--line--2);
   font-size: 2em;
   margin: 0.67em 0;
 }
@@ -79,14 +134,14 @@ strong {
 }
 
 /**
- * 1. Use monospace font family in all browsers.
+ * Generic typography for monospaced elements.
  */
 
 code,
 kbd,
 samp,
 pre {
-  font-family: monospace, monospace; /* 1 */
+  font-family: var(--font-mono);
 }
 
 /**
@@ -94,7 +149,7 @@ pre {
  */
 
 small {
-  font-size: 80%;
+  font-size: var(--scale-smaller);
 }
 
 /**
@@ -104,7 +159,7 @@ small {
 
 sub,
 sup {
-  font-size: 75%;
+  font-size: var(--scale-smaller);
   line-height: 0;
   position: relative;
   vertical-align: baseline;
