--- a/tokens.css
+++ b/tokens.css
@@ -26,4 +26,6 @@
   --line-1: var(--line-root);
   --line-2: var(--line-root);
   --line-3: var(--line-root);
+  --spacing-block: var(--line-root-abs);
+  --spacing-inline: calc(2 * var(--line-root-abs));
 }
