--- a/n’ize.css
+++ b/n’ize.css
@@ -1,19 +1,16 @@
-/*! n’ize.css v0.2.1 | MIT License | github.com/smnscp/n-ize.css */
+/*! n’ize.css v0.3.0 | MIT License | github.com/smnscp/n-ize.css */
 
 /* Document
-   ========================================================================== */
+ * ========================================================================== */
 
 /**
  * 1. Set Box sizing default to border-box (https://css-tricks.com/box-sizing/)
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- * 3. Provide a slot for setting the root line height.
+ * 2. Provide a slot for setting the root line height.
  */
 
 :root {
   box-sizing: border-box; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-  text-size-adjust: 100%; /* 2 */
-  line-height: var(--line-root); /* 3 */
+  line-height: var(--line-root); /* 2 */
 }
 
 /* everything inherits border-box unless specified */
@@ -22,9 +19,6 @@
 ::after {
   box-sizing: inherit;
 }
-
-/* Sections
-   ========================================================================== */
 
 /**
  * 1. Remove the margin in all browsers.
@@ -39,8 +33,14 @@ body {
   line-height: var(--line-0);
 }
 
+/* Sections
+ * ========================================================================== */
+
 /**
  * Generic typography for headings.
+ * Include selectors for `h1` as subheading:
+ *   https://developer.mozilla.org/en-US/docs/Web/HTML/Element/Heading_Elements#multiple_h1_elements_on_one_page
+ * Use common block margin to help establishing a baseline grid.
  */
 
 h1,
@@ -51,21 +51,19 @@ h5,
 h6 {
   font-family: var(--font-titling);
   font-weight: var(--weight-titling);
+  margin-block: var(--spacing-block-titling);
 }
 h1 {
   font-size: var(--scale-3);
   line-height: var(--line-3);
 }
 h2,
-:is(article, aside, nav, section)
-  h1 {
+:is(article, aside, nav, section) h1 {
   font-size: var(--scale-2);
   line-height: var(--line-2);
 }
 h3,
-:is(article, aside, nav, section)
-  :is(article, aside, nav, section)
-  h1 {
+:is(article, aside, nav, section) :is(article, aside, nav, section) h1 {
   font-size: var(--scale-1);
   line-height: var(--line-1);
 }
@@ -97,25 +95,15 @@ h6,
   line-height: var(--line--2);
 }
 
+/* Grouping content
+ * ========================================================================== */
+
 /**
  * Use common block margin to help establishing a baseline grid.
  */
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-dl,
-blockquote,
-figure,
-pre,
-ol,
-ul,
-menu,
-dir {
+:is(p, blockquote, figure, pre, menu, dir),
+:not(dd, li) :is(dl, ol, ul) {
   margin-block: var(--spacing-block);
 }
 
@@ -134,43 +122,13 @@ dd {
   margin-inline-start: var(--spacing-inline);
 }
 
-blockquote, figure {
+blockquote,
+figure {
   margin-inline: var(--spacing-inline);
 }
 
-/* Grouping content
-   ========================================================================== */
-
-/**
- * 1. Use relative size.
- * 2. Use flat style.
- * 3. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
- */
-
-hr {
-  border: 0.0625em solid; /* 1, 2 */
-  color: inherit; /* 3 */
-}
-
 /* Text-level semantics
-   ========================================================================== */
-
-/**
- * Add the correct text decoration in Chrome, Edge, and Safari.
- */
-
-abbr[title] {
-  text-decoration: underline dotted;
-}
-
-/**
- * Add the correct font weight in Edge and Safari.
- */
-
-b,
-strong {
-  font-weight: bolder;
-}
+ * ========================================================================== */
 
 /**
  * Generic typography for monospaced elements.
@@ -210,147 +168,4 @@ sub {
 
 sup {
   top: -0.5em;
-}
-
-/* Tabular data
-   ========================================================================== */
-
-/**
- * 1. Remove text indentation from table contents in Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=999088, https://bugs.webkit.org/show_bug.cgi?id=201297)
- * 2. Correct table border color inheritance in all Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
- */
-
-table {
-  text-indent: 0; /* 1 */
-  border-color: inherit; /* 2 */
-}
-
-/* Forms
-   ========================================================================== */
-
-/**
- * 1. Inherit the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit; /* 1 */
-  line-height: inherit; /* 1 */
-  font-size: inherit; /* 1 */
-  margin: 0; /* 2 */
-}
-
-/**
- * Remove the inheritance of text transform in Edge and Firefox.
- */
-
-button,
-select {
-  text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-
-::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-
-:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
- * Remove the additional `:invalid` styles in Firefox.
- * See: https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737
- */
-
-:-moz-ui-invalid {
-  box-shadow: none;
-}
-
-/**
- * Remove the padding so developers are not caught out when they zero out
- * `fieldset` elements in all browsers.
- */
-
-legend {
-  padding: 0;
-}
-
-/**
- * Add the correct vertical alignment in Chrome and Firefox.
- */
-
-progress {
-  vertical-align: baseline;
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Safari.
- */
-
-::-webkit-inner-spin-button,
-::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-
-[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-
-::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-
-/**
- * Add the correct display in Chrome and Safari.
- */
-
-summary {
-  display: list-item;
 }
