--- a/n’ize.css
+++ b/n’ize.css
@@ -1,4 +1,4 @@
-/*! n’ize.css v0.5.0 | MIT License | github.com/smnscp/n-ize.css */
+/*! n’ize.css v0.5.1 | MIT License | github.com/smnscp/n-ize.css */
 
 /**
  * ## Document
@@ -83,7 +83,7 @@ h6 {
  * https://alistapart.com/article/axiomatic-css-and-lobotomized-owls/
  */
 
- * + :is(h1, h2, h3, h4, h5, h6) {
+* + :is(h1, h2, h3, h4, h5, h6) {
   margin-block-start: var(--spacing-heading);
 }
 
@@ -92,7 +92,7 @@ h6 {
 }
 
 * + :is(p, blockquote, figure, pre, menu, dir),
-:not(dd, li) > * + :is(dl, ol, ul) {
+:not(dd, li, li > details) > * + :is(dl, ol, ul) {
   margin-block-start: var(--spacing-block);
 }
 
