--- a/n-ize.css
+++ b/n-ize.css
@@ -92,6 +92,7 @@ h6 {
 }
 
 * + :is(p, blockquote, figure, figcaption, pre, menu, dir, hr),
+:is(h1, h2, h3, h4, h5, h6, p, blockquote, figure, figcaption, pre, menu, dir, hr) + div,
 :not(dd, li, li > details) > * + :is(dl, ol, ul) {
   margin-block-start: var(--spacing-block);
 }
